[package]
name = "piaic-rust-assignment-3-todo"
version = "0.1.0"
authors = ["saifali <saif.tharani95@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
hyper = "0.12"
lazy_static = "1.3"
log = "0.4"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tera = "0.11"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.uuid]
features = ["serde", "v4"]
version = "0.7"